Scoreboard design added

--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
   >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="src/js/jquery.min.js" type="text/javascript"></script>
+    <script src="src/js/catan.js" type="text/javascript"></script>
   </body>
 </html>
