Map Generation Done

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/wool.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ReactArt</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,7 +27,7 @@
     </script>
   </head>
   <body
-    class="min-h-screen bg-gradient-to-br from-amber-700 via-orange-300 to-rose-800 overflow-hidden"
+    class="min-h-screen bg-gradient-to-br from-amber-700 via-orange-300 to-rose-800"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
